Add paragraph on periodic models.

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -489,3 +489,16 @@ year = {2001},
 abstract = {}, 
 keywords = {}}
 
+@Book{Williams2002,
+author = {Williams, B. K. and Nichols, J. D. and Conroy, M. J. }, 
+title = {Analysis and Management of Animal Popiulations}, 
+volume = {}, 
+pages = {817}, 
+editor = {}, 
+edition = {}, 
+publisher = {Academic Press}, 
+address = {London, UK}, 
+year = {2002}, 
+abstract = {}, 
+keywords = {}}
+
